--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,5 +28,5 @@ jobs:
       # Run markdown lint
       - name: Run markdown lint
         run: |
-          _npm install remark-cli remark-preset-lint-consistent_
-          _npx remark . --use remark-preset-lint-consistent --frail_
+          npm install remark-cli remark-preset-lint-consistent
+          npx remark . --use remark-preset-lint-consistent --frail
