--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
       - uses: actions/checkout@v3
 
       # Run markdown lint
-      - name: _Run markdown lint_
+      - name: Run markdown lint
         run: |
-          npm install _remark-cli_ _remark-preset-lint-consistent_
-          npx remark . --use remark-preset-lint-consistent --frail
+          npm install remark-cli remark-preset-lint-consistent
+          npx remark _._ --use remark-preset-lint-consistent --frail
